<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ALuaj</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>


	<string name="playing">运行</string>
	<string name="packing">打包</string>


    <string name="查找">查找</string>
    <string name="跳转">跳转</string>
    <string name="替换">替换</string>
    <string name="对齐代码">对齐</string>
    <string name="代码分析">代码分析</string>
    <string name="整理导入包">导包</string>

	<string name="action_spinner">最近</string>
	<string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_clear">工程</string>
	<string name="drawer_open">open</string>
	<string name="drawer_close">close</string>

	<string name="allSelect">全选</string>
	<string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="cut">剪切</string>

</resources>
